# hexmaps

./: .gitignore  README.md  pyproject.toml
hexmaps/: utilities.py
hexmaps/earth/: civ.py  geo.py  grid.py  map.py  overpass.py
hexmaps/earth/overpass/: api.py  base.py  node.py  relation.py  way.py
hexmaps/earth/spatial/: geojson.py  geometry.py  proj.py
tests/: conftest.py  test_relation.py
